kubectl/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webservice-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels: 
        app: httpd
    spec:
      containers:
      - name: webservice
        image: skalluru/webservice:v1
        ports:
        - containerPort: 80
