kubectl/service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: httpd
