kubectl/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    http.port: "80"
spec:
  backend:
    serviceName: web-service
    servicePort: 80
